# anki-vocab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  READ.md  README.md  add_word.py  config.py  exceptions.py  models.py  pyproject.toml  requirements-lock.txt  requirements.txt  word
.github/workflows/: ci.yml
anki/: cache.py  formatter.py  local_store.py  repository.py
display/: renderer.py
llm/: base.py  claude.py
practice/: __init__.py  generator.py  selector.py  server.py
practice/static/: style.css
practice/templates/: practice.html
scripts/: test
services/: word_service.py
tests/: test_core.py
tts/: __init__.py  base.py  openai_tts.py  player.py  utils.py
